changes to make it work on a dev-server

--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,12 @@
     <version>1.0</version>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven-dependency-plugin.phase>prepare-package</maven-dependency-plugin.phase>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven-dependency-plugin.version>3.0.2</maven-dependency-plugin.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
   <dependencies>
@@ -25,15 +29,14 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
+                <artifactId>maven-compiler-plugin</artifactId>
                 <executions>
                     <execution>
                         <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
                         <configuration>
                             <finalName>cdc-app</finalName>
+                            <source>1.8</source>
+                            <target>1.8</target>
                             <archive>
                                 <manifest>
                                     <mainClass>
