--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,11 @@
     </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>com.yugabyte</groupId>
-      <artifactId>jdbc-yugabytedb</artifactId>
-      <version>42.2.7-yb-5-beta.5</version>
-    </dependency>
+      <dependency>
+          <groupId>com.yugabyte</groupId>
+          <artifactId>jdbc-yugabytedb</artifactId>
+          <version>42.3.0-beta.1</version>
+      </dependency>
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
