--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
       <artifactId>postgresql</artifactId>
       <version>42.2.14</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.28</version>
+    </dependency>
   </dependencies>
 
     <build>
